@startuml

package ui {
    component EditorPage
    component EditorLayout
    component CoreProvider
    component PersistenceProvider
    component AppLayout
    component MainMenuPage

    EditorLayout *-- EditorPage
    CoreProvider <.. EditorLayout

    AppLayout *-- MainMenuPage
    PersistenceProvider <.. AppLayout

    AppLayout *-- EditorLayout
}

package persistence <<unstable>> {
    component ConcretePersistenceImpl
}

note top of persistence
    Can be hot-swapped during runtime
    depending on the selected backend
endnote

package core <<stable>> {
    component CoreServiceImpl

    note top
        Only available in-editor
    endnote

    interface ICrateService
    interface IPersistenceService
    interface ICoreService

    IPersistenceService *-- ICrateService
    CoreServiceImpl -- ICoreService
}


CoreServiceImpl --( ICrateService
IPersistenceService -- ConcretePersistenceImpl

PersistenceProvider --( IPersistenceService

ICoreService )-- CoreProvider

note "Everything depends on core" as N1
N1 .. core

@enduml